--- a/src/app.scss
+++ b/src/app.scss
@@ -25,3 +25,21 @@ a {
 .float-right {
   float: right;
 }
+
+
+.card {
+  width: 50%;
+  margin: auto;
+}
+
+@media (max-width: 500px) {
+  .card {
+    width: 100%;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 1000px) {
+  .card {
+    width: 75%;
+  }
+}
